--- a/portfolio.styles.css
+++ b/portfolio.styles.css
@@ -3,6 +3,7 @@
   --main-text-color: #212121;
   --secondary-text-color: #757575;
   --blue-color: #2196F3;
+  --black-color: #000000;
   --accent-text-color: #ffffff; 
   --main-bg-color: #E5E5E5;
   --secondary-bg-color: #F5F4FA;
@@ -28,7 +29,7 @@ a {
 
 /*Секция Хедер*/
 .logo {
-  color: var(--main-text-color);
+  color: var(--blue-color);
   font-family: 'Raleway', sans-serif ;
   font-weight: 700;
   font-size: 26px;
@@ -36,7 +37,7 @@ a {
   
 }
 .logo-accent {
-  color: var(--blue-color);
+  color: var(--black-color);
 }
        
 /* Навигация */
@@ -135,10 +136,10 @@ a {
   background-color: var(--accent-bg-color);
 
 }
-.footer .logo {
+
+.footer-logo-accent{
   color: var(--accent-text-color);
 }
-
 .footer-adress {
   color: var(--accent-text-color);    
   line-height: 1.71;            
