--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,23 @@
 :root {
   --main-text-color: #212121;
   --secondary-text-color: #757575;
-  --blue-color: #2196F3;
+  --blue-color: #2196f3;
   --black-color: #000000;
-  --accent-text-color: #ffffff; 
-  --main-bg-color: #2F303A;
-  --primary-bg-color: #E5E5E5;
-  --secondary-bg-color: #F5F4FA;
-  
-  
-  }
+  --accent-text-color: #ffffff;
+  --main-bg-color: #2f303a;
+  --primary-bg-color: #e5e5e5;
+  --secondary-bg-color: #f5f4fa;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 body {
   color: var(--main-text-color);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: var(--accent-text-color);
   font-size: 14px;
   letter-spacing: 0.03em;
@@ -21,29 +25,87 @@ body {
 
 ul {
   list-style: none;
-  }
+  margin: 0;
+  padding: 0;
+}
 
 a {
   text-decoration: none;
-  }
+  font-style: normal;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 /*Секция хедер*/
+
+.page-header {
+  border-bottom: 1px solid var(--border-header-color);
+}
+
 .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
+
   color: var(--blue-color);
-  font-family: 'Raleway', sans-serif ;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.19;     
-  
+  line-height: 1.19;
 }
 .logo-accent {
   color: var(--black-color);
 }
-       
+
 /* Навигация */
+
+.main-nav,
+.general-nav {
+  display: flex;
+}
+
+.site-nav {
+  display: flex;
+  padding-left: 0;
+}
+
+.site-nav .item {
+  margin-right: 50px;
+}
+
+.site-nav .item:last-child {
+  margin-right: 0;
+}
+
 .site-nav .link {
-  color: var(--main-text-color);    
-  font-weight: 500;    
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  color: var(--main-text-color);
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
@@ -53,53 +115,75 @@ a {
   color: var(--blue-color);
 }
 .site-nav .link.current {
-  color: var(--blue-color)
-
+  color: var(--blue-color);
 }
 
 /*Контакты*/
 .link-contacts .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--secondary-text-color);
-  font-weight: 500;    
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+
 .link-contacts .link:hover,
 .link-contacts .link:focus {
-  color: var(--blue-color);    
+  color: var(--blue-color);
+}
+
+.link-contacts {
+  display: flex;
+  padding-right: 0;
+  padding-left: 0;
+  margin-left: auto;
+}
+
+.link-contacts .item + .item {
+  margin-left: 50px;
 }
 
 /*Секция Герой*/
 .hero {
-background-color: var(--main-bg-color);
+  background-color: var(--main-bg-color);
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-bottom: 100px;
 }
 .hero-title {
+  margin-bottom: 30px;
+  max-width: 696px;
+
   color: var(--accent-text-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase; 
-        
+  text-transform: uppercase;
 }
-
 
 .hero-button {
   color: var(--accent-text-color);
   background-color: var(--blue-color);
   border-color: var(--blue-color);
 
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  
+
+  display: inline-block;
+  padding: 10px 32px;
 }
-  
+
 .hero-button:hover,
 .hero-button:focus {
   color: var(--accent-text-color);
@@ -107,9 +191,17 @@ background-color: var(--main-bg-color);
   cursor: pointer;
 }
 /*Секция наши особенности*/
+.feature {
+  margin-bottom: 100px;
+}
+.feature-list {
+  display: flex;
+  gap: 30px;
+  padding-left: 0;
+}
 
-.visually-hidden{
-  position:absolute;
+.visually-hidden {
+  position: absolute;
   white-space: nowrap;
   width: 1px;
   height: 1px;
@@ -119,17 +211,17 @@ background-color: var(--main-bg-color);
   clip: rect (0 0 0 0);
   clip-path: inset (100%);
   margin: -1px;
-  }
-
- 
-.feature-list .title{
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
 }
 
+.feature-list .title {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-text-color);
+}
 
 .feature-list .item {
   font-weight: 400;
@@ -137,16 +229,29 @@ text-transform: uppercase;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  flex-basis: calc((100% - 90px) / 4);
 }
 
-
-
 /*Секция наши занятия*/
+
+.skills {
+  padding-top: 0px;
+  margin-bottom: 100px;
+}
+
 .skills-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.17;
-letter-spacing: 0.03em;
+  margin-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.skills-list {
+  display: flex;
+  gap: 30px;
 }
 
 /*Секция наша команда*/
@@ -154,55 +259,80 @@ letter-spacing: 0.03em;
   background-color: var(--secondary-bg-color);
 }
 
-.team-title{
+.team-title {
+  padding-bottom: 50px;
+  padding-top: 100px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;        
- 
+  line-height: 1.17;
+
+  text-align: center;
 }
+
+.team-list {
+  padding-bottom: 100px;
+}
+
 .team-face {
   background-color: var(--accent-text-color);
   width: 270px;
   height: 368px;
-  
 }
 
 .team-face .title {
   font-weight: 500;
   font-size: 16px;
-  line-height:1.19;
+  line-height: 1.19;
+  text-align: center;
 }
 
 .team-face .item {
-color: var(--secondary-text-color);
-font-size: 16px;
-line-height: 1.19;
-
-
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  margin-top: 10px;
 }
+
+.team-list {
+  display: flex;
+  gap: 30px;
+}
+
+.team-list .team-face-description {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 70;
+}
+
 /*Секция футер*/
 .footer {
   background-color: var(--main-bg-color);
-
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin-bottom: 0px;
 }
 .footer .logo {
+  display: block;
+  margin-right: 93px;
+
   color: var(--blue-color);
 }
 
-.footer-logo-accent{
+.footer-logo-accent {
   color: var(--accent-text-color);
 }
 
 .footer-adress {
-  color: var(--accent-text-color);    
-  line-height: 1.71;            
-      
+  color: var(--accent-text-color);
+  line-height: 1.71;
 }
 
 .footer-contacts .link {
-  color: rgba(255, 255, 255, 0.6);    
+  display: block;
+  color: rgba(255, 255, 255, 0.6);
   line-height: 1.71;
-  
+  margin-top: 9px;
 }
 
 .footer-contacts .footer-adress:hover {
@@ -212,4 +342,8 @@ line-height: 1.19;
 .footer-contacts .link:hover,
 .footer-contacts .link:focus {
   color: var(--blue-color);
+}
+.footer-contacts {
+  display: block;
+  padding-left: 0;
 }
