--- a/portfolio.styles.css
+++ b/portfolio.styles.css
@@ -147,7 +147,6 @@ a {
 
 /*Кнопки*/
 .button {
-  margin-top: 100px;
   padding: 6px 22px;
   font-family: 'Roboto', sans-serif;
   color: var(--main-text-color);
@@ -188,7 +187,8 @@ a {
 
 .portfolio{
   background-color: var (var(--main-bg-color));
-  margin-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .portfolio-picture .item {
@@ -247,9 +247,15 @@ a {
 
 }
 
-.footer .logo {
+.footer-logo {
+  font-family: 'Raleway', sans-serif ;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;     
+  
   display: block;
   margin-right: 93px;
+  margin-bottom: 20px;
 
   color: var(--blue-color);
 }
